--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "graphql": "15.5.1",
+    "graphql-tools": "8.1.0",
     "graphql-type-json": "0.3.2",
     "jsonwebtoken": "8.5.1",
     "module-alias": "2.2.2",
