--- a/package.json
+++ b/package.json
@@ -54,9 +54,7 @@
     "mongoose": "5.13.5",
     "morgan": "1.10.0",
     "signale": "1.4.0",
-    "typescript": "4.3.5"
-  },
-  "devDependencies": {
+    "typescript": "4.3.5",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.13",
     "@types/module-alias": "2.0.1",
