--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@graphql-codegen/typescript-resolvers": "2.0.0",
     "@graphql-tools/load-files": "6.3.2",
     "@graphql-tools/merge": "7.0.0",
-    "@graphql-tools/schema": "8.0.3",
+    "@graphql-tools/schema": "7.1.5",
+    "@graphql-tools/utils": "7.10.0",
     "@swc/core": "1.2.74",
     "@swc/register": "0.1.7",
     "apollo-datasource-rest": "3.1.1",
