--- a/package.json
+++ b/package.json
@@ -39,23 +39,6 @@
     "@graphql-tools/utils": "7.10.0",
     "@swc/core": "1.2.74",
     "@swc/register": "0.1.7",
-    "apollo-datasource-rest": "3.1.1",
-    "apollo-server": "3.1.2",
-    "apollo-server-express": "3.1.2",
-    "axios": "0.21.1",
-    "bcrypt": "5.0.1",
-    "body-parser": "1.19.0",
-    "dotenv": "10.0.0",
-    "express": "4.17.1",
-    "graphql": "15.5.1",
-    "graphql-tools": "8.1.0",
-    "graphql-type-json": "0.3.2",
-    "jsonwebtoken": "8.5.1",
-    "module-alias": "2.2.2",
-    "mongoose": "5.13.5",
-    "morgan": "1.10.0",
-    "signale": "1.4.0",
-    "typescript": "4.3.5",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.13",
     "@types/module-alias": "2.0.1",
@@ -65,6 +48,14 @@
     "@types/signale": "1.4.2",
     "@typescript-eslint/eslint-plugin": "4.29.0",
     "@typescript-eslint/parser": "4.29.0",
+    "apollo-datasource-rest": "3.1.1",
+    "apollo-server": "3.1.2",
+    "apollo-server-express": "3.1.2",
+    "aws-sdk": "2.966.0",
+    "axios": "0.21.1",
+    "bcrypt": "5.0.1",
+    "body-parser": "1.19.0",
+    "dotenv": "10.0.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -72,10 +63,20 @@
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
+    "express": "4.17.1",
+    "graphql": "15.5.1",
+    "graphql-tools": "8.1.0",
+    "graphql-type-json": "0.3.2",
     "husky": "7.0.1",
+    "jsonwebtoken": "8.5.1",
     "lint-staged": "11.1.2",
+    "module-alias": "2.2.2",
+    "mongoose": "5.13.5",
+    "morgan": "1.10.0",
     "nodemon": "2.0.12",
-    "prettier": "2.3.2"
+    "prettier": "2.3.2",
+    "signale": "1.4.0",
+    "typescript": "4.3.5"
   },
   "_moduleAliases": {
     "actuators": "/src/datalayer/actuators",
