--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "graphql-type-json": "0.3.2",
     "husky": "7.0.1",
     "jsonwebtoken": "8.5.1",
+    "krowdy-geoip": "1.0.2",
     "lint-staged": "11.1.2",
     "module-alias": "2.2.2",
     "mongoose": "5.13.5",
