[update] add lock

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "controllers/*": ["src/datalayer/controllers/*"],
       "config/*": ["src/config/*"],
       "interfaces/*": ["src/service/interfaces/*"],
-      "utils/*": ["src/utils/*"],
+      "utils/*": ["src/utils/*"]
     },
     "lib": [
       "es5",
@@ -21,14 +21,13 @@
     "rootDirs": [
       "src"
     ],
-    "noUnusedLocals": false,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    // "noUnusedLocals": true,
+    "noUnusedLocals": true,
     "importHelpers": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
@@ -50,13 +49,13 @@
       "node_modules/@types"
     ]
   },
+  "include": [
+    "**/*.ts"
+  ],
   "exclude": [
     "dist",
     "node_modules",
     "jest.config.js",
     ".eslintplugin.js"
-  ],
-  "include": [
-    "**/*.ts"
   ]
 }
