--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "axios": "0.21.0",
     "bcrypt": "5.0.0",
     "body-parser": "1.19.0",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "graphql": "15.5.1",
     "graphql-type-json": "0.3.2",
