--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@graphql-tools/load-files": "6.2.5",
     "@graphql-tools/merge": "6.2.6",
     "@graphql-tools/schema": "7.1.2",
+    "@graphql-tools/utils": "7.10.0",
     "@swc/core": "1.2.40",
     "@swc/core-linux": "1.2.40",
     "@swc/register": "0.1.7",
@@ -45,16 +46,19 @@
     "axios": "0.21.0",
     "bcrypt": "5.0.0",
     "body-parser": "1.19.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "4.17.1",
     "graphql": "15.5.1",
     "graphql-type-json": "0.3.2",
     "jsonwebtoken": "8.5.1",
+    "krowdy-geoip": "1.0.2",
     "module-alias": "2.2.2",
     "mongoose": "5.11.8",
     "morgan": "1.10.0",
     "signale": "1.4.0",
-    "typescript": "4.1.3"
+    "typescript": "4.1.3",
+    "aws-sdk": "2.966.0",
+    "graphql-tools": "8.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
