--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,11 @@ dev docker build:
     - echo "ATS_RESTIFY_BASE=${DEV_ATS_RESTIFY_BASE}" >> .env
     - echo "ACCOUNTS_API=${DEV_ACCOUNTS_API}" >> .env
     - echo "RESPONSABLES_API=${DEV_RESPONSABLES_API}" >> .env
+    - echo "PORTALES_API=${DEV_PORTALES_API}" >> .env
+    - echo "BUCKET_DIR=${DEV_BUCKET_DIR}" >> .env
+    - echo "AWS_ACCESS_KEY_ID=${DEV_AWS_ACCESS_KEY_ID}" >> .env
+    - echo "AWS_SECRET_ACCESS_KEY=${DEV_AWS_SECRET_ACCESS_KEY}" >> .env
+    - echo "AWS_REGION=${DEV_AWS_REGION}" >> .env
     - echo "Recovering build version"
     - export BUILD_VERSION=${CI_COMMIT_TAG}
     - echo "Login to aws ecr"
@@ -49,6 +54,11 @@ prebuild docker build:
     - echo "ATS_RESTIFY_BASE=${PREBUILD_ATS_RESTIFY_BASE}" >> .env
     - echo "ACCOUNTS_API=${PREBUILD_ACCOUNTS_API}" >> .env
     - echo "RESPONSABLES_API=${PREBUILD_RESPONSABLES_API}" >> .env
+    - echo "PORTALES_API=${PREBUILD_PORTALES_API}" >> .env
+    - echo "BUCKET_DIR=${PREBUILD_BUCKET_DIR}" >> .env
+    - echo "AWS_ACCESS_KEY_ID=${PREBUILD_AWS_ACCESS_KEY_ID}" >> .env
+    - echo "AWS_SECRET_ACCESS_KEY=${PREBUILD_AWS_SECRET_ACCESS_KEY}" >> .env
+    - echo "AWS_REGION=${PREBUILD_AWS_REGION}" >> .env
     - echo "Recovering build version"
     - export BUILD_VERSION=${CI_COMMIT_TAG}
     - echo "Login to aws ecr"
@@ -82,6 +92,11 @@ build docker build:
     - echo "ATS_RESTIFY_BASE=${BUILD_ATS_RESTIFY_BASE}" >> .env
     - echo "ACCOUNTS_API=${BUILD_ACCOUNTS_API}" >> .env
     - echo "RESPONSABLES_API=${BUILD_RESPONSABLES_API}" >> .env
+    - echo "PORTALES_API=${BUILD_PORTALES_API}" >> .env
+    - echo "BUCKET_DIR=${BUILD_BUCKET_DIR}" >> .env
+    - echo "AWS_ACCESS_KEY_ID=${BUILD_AWS_ACCESS_KEY_ID}" >> .env
+    - echo "AWS_SECRET_ACCESS_KEY=${BUILD_AWS_SECRET_ACCESS_KEY}" >> .env
+    - echo "AWS_REGION=${BUILD_AWS_REGION}" >> .env
     - echo "Recovering build version"
     - export BUILD_VERSION=${CI_COMMIT_TAG}
     - echo "Login to aws ecr"
