--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "apollo-datasource-rest": "0.9.5",
     "apollo-server": "2.19.0",
     "apollo-server-express": "2.19.0",
+    "aws-sdk": "2.966.0",
     "axios": "0.21.0",
     "bcrypt": "5.0.0",
     "body-parser": "1.19.0",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "graphql": "15.5.1",
+    "graphql-tools": "8.1.0",
     "graphql-type-json": "0.3.2",
     "jsonwebtoken": "8.5.1",
     "krowdy-geoip": "1.0.2",
@@ -56,8 +58,7 @@
     "morgan": "1.10.0",
     "signale": "1.4.0",
     "typescript": "4.1.3",
-    "aws-sdk": "2.966.0",
-    "graphql-tools": "8.1.0"
+    "url-parse": "1.5.3"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
@@ -67,6 +68,7 @@
     "@types/morgan": "1.9.2",
     "@types/node": "14.14.14",
     "@types/signale": "1.4.1",
+    "@types/url-parse": "1.4.4",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
     "eslint": "7.16.0",
