--- a/package.json
+++ b/package.json
@@ -42,22 +42,23 @@
     "apollo-datasource-rest": "0.9.5",
     "apollo-server": "2.19.0",
     "apollo-server-express": "2.19.0",
+    "aws-sdk": "2.966.0",
     "axios": "0.21.0",
     "bcrypt": "5.0.0",
     "body-parser": "1.19.0",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "graphql": "15.5.1",
+    "graphql-tools": "8.1.0",
     "graphql-type-json": "0.3.2",
     "jsonwebtoken": "8.5.1",
     "krowdy-geoip": "1.0.2",
     "module-alias": "2.2.2",
     "mongoose": "5.11.8",
     "morgan": "1.10.0",
+    "redis": "3.1.2",
     "signale": "1.4.0",
-    "typescript": "4.1.3",
-    "aws-sdk": "2.966.0",
-    "graphql-tools": "8.1.0"
+    "typescript": "4.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
@@ -66,6 +67,7 @@
     "@types/mongoose": "5.10.3",
     "@types/morgan": "1.9.2",
     "@types/node": "14.14.14",
+    "@types/redis": "2.8.32",
     "@types/signale": "1.4.1",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
