--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ dev docker build:
     - echo "AWS_REGION=${DEV_AWS_REGION}" >> .env
     - echo "REDIS_HOST=${DEV_REDIS_HOST}" >> .env
     - echo "REDIS_PORT=${DEV_REDIS_PORT}" >> .env
+    - echo "APP_URL=${DEV_APP_URL}" >> .env
     - echo "Recovering build version"
     - export BUILD_VERSION=${CI_COMMIT_TAG}
     - echo "Login to aws ecr"
@@ -62,6 +63,7 @@ prebuild docker build:
     - echo "AWS_REGION=${PREBUILD_AWS_REGION}" >> .env
     - echo "REDIS_HOST=${PREBUILD_REDIS_HOST}" >> .env
     - echo "REDIS_PORT=${PREBUILD_REDIS_PORT}" >> .env
+    - echo "APP_URL=${PREBUILD_APP_URL}" >> .env
     - echo "Recovering build version"
     - export BUILD_VERSION=${CI_COMMIT_TAG}
     - echo "Login to aws ecr"
@@ -101,6 +103,7 @@ build docker build:
     - echo "AWS_REGION=${BUILD_AWS_REGION}" >> .env
     - echo "REDIS_HOST=${BUILD_REDIS_HOST}" >> .env
     - echo "REDIS_PORT=${BUILD_REDIS_PORT}" >> .env
+    - echo "APP_URL=${BUILD_APP_URL}" >> .env
     - echo "Recovering build version"
     - export BUILD_VERSION=${CI_COMMIT_TAG}
     - echo "Login to aws ecr"
