--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "NODE_ENV=production NEWRELIC_ENABLED_SERVICE=active node dist/index.js",
     "build": "swc ./src index.ts -d dist -D",
     "postinstall": "npm run generate && npm run build",
     "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node -r @swc/register index.ts",
@@ -56,6 +56,7 @@
     "module-alias": "2.2.2",
     "mongoose": "5.11.8",
     "morgan": "1.10.0",
+    "newrelic": "8.5.2",
     "redis": "3.1.2",
     "signale": "1.4.0",
     "typescript": "4.1.3",
