--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "importHelpers": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "emitDecoratorMetadata": false,
     "esModuleInterop": true,
     "experimentalDecorators": false,
@@ -51,7 +51,8 @@
     ]
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts", 
+    "newrelic.js"  
   ],
   "exclude": [
     "dist",
