--- a/package.json
+++ b/package.json
@@ -93,5 +93,8 @@
     "config": "/src/config",
     "interfaces": "/src/service/interfaces",
     "utils": "/src/utils"
+  },
+  "resolutions": {
+    "graphql": "15.5.1"
   }
 }
