--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "graphql": "15.5.1",
     "graphql-tools": "8.1.0",
     "graphql-type-json": "0.3.2",
+    "ip2location-nodejs": "9.1.0",
     "jsonwebtoken": "8.5.1",
     "krowdy-geoip": "1.0.2",
     "module-alias": "2.2.2",
