--- a/.github/workflows/deployments-build.yml
+++ b/.github/workflows/deployments-build.yml
@@ -45,6 +45,7 @@ jobs:
         REDIS_PORT: ${{ secrets.BUILD_REDIS_PORT }}
         APP_URL: ${{ secrets.BUILD_APP_URL }}
         NEWRELIC_ENABLED_SERVICE: ${{ secrets.BUILD_NEWRELIC_ENABLED_SERVICE }}
+        APP_SCRAPPER_ONETS_URL: ${{ secrets.BUILD_APP_SCRAPPER_ONETS_URL }}
 
       run: |
         # Build a docker container and push it to ECR
