--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
 		"husky": "4.3.6",
 		"lint-staged": "10.5.3",
 		"nodemon": "2.0.6",
-		"prettier": "2.2.1"
+		"prettier": "2.2.1",
+		"@swc/core-linux": "1.2.40"
 	},
 	"optionalDependencies": {
 		"@swc/core-linux": "1.2.40"
