--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
 		"redis": "3.1.2",
 		"signale": "1.4.0",
 		"typescript": "4.1.3",
-		"url-parse": "1.5.3"
+		"url-parse": "1.5.3",
+		"@swc/core-linux": "1.2.40",
+		"@swc/core-linux-musl": "1.2.40"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "3.0.0",
@@ -84,9 +86,7 @@
 		"husky": "4.3.6",
 		"lint-staged": "10.5.3",
 		"nodemon": "2.0.6",
-		"prettier": "2.2.1",
-		"@swc/core-linux": "1.2.40",
-		"@swc/core-linux-musl": "1.2.40"
+		"prettier": "2.2.1"
 	},
 	"_moduleAliases": {
 		"actuators": "/src/datalayer/actuators",
