--- a/.github/workflows/deployments-build.yml
+++ b/.github/workflows/deployments-build.yml
@@ -64,6 +64,7 @@ jobs:
         echo "REDIS_PORT=$REDIS_PORT" >> .env
         echo "APP_URL=$APP_URL" >> .env
         echo "NEWRELIC_ENABLED_SERVICE=$NEWRELIC_ENABLED_SERVICE" >> .env
+        echo "APP_SCRAPPER_ONETS_URL=$APP_SCRAPPER_ONETS_URL" >> .env
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
