--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		"@graphql-tools/schema": "7.1.2",
 		"@graphql-tools/utils": "7.10.0",
 		"@swc/core": "1.2.40",
+		"@swc/core-linux": "1.2.40",
+		"@swc/core-linux-musl": "1.2.40",
 		"@swc/register": "0.1.7",
 		"apollo-datasource-rest": "0.9.5",
 		"apollo-server": "2.19.0",
@@ -60,9 +62,7 @@
 		"redis": "3.1.2",
 		"signale": "1.4.0",
 		"typescript": "4.1.3",
-		"url-parse": "1.5.3",
-		"@swc/core-linux": "1.2.40",
-		"@swc/core-linux-musl": "1.2.40"
+		"url-parse": "1.5.3"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "3.0.0",
