--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
 		"tsc": "tsc",
 		"lint": "eslint . --ext .js,.ts --fix",
 		"generate": "graphql-codegen --config codegen.yml",
-		"lint-staged": "lint-staged"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
+		"lint-staged": "lint-staged",
+		"prepare": "husky install",
+		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
 		"{handler,src}/**/*.{js,ts}": [
@@ -26,67 +23,66 @@
 		]
 	},
 	"dependencies": {
-		"@ghondar/cli": "0.1.27",
-		"@graphql-codegen/cli": "1.19.4",
-		"@graphql-codegen/introspection": "1.18.1",
-		"@graphql-codegen/typescript": "1.19.0",
-		"@graphql-codegen/typescript-mongodb": "1.17.9",
-		"@graphql-codegen/typescript-resolvers": "1.18.0",
-		"@graphql-tools/load-files": "6.2.5",
-		"@graphql-tools/merge": "6.2.6",
-		"@graphql-tools/schema": "7.1.2",
-		"@graphql-tools/utils": "7.10.0",
-		"@swc/core": "1.2.40",
-		"@swc/core-linux": "1.2.40",
-		"@swc/core-linux-musl": "1.2.40",
-		"@swc/register": "0.1.7",
-		"apollo-datasource-rest": "0.9.5",
-		"apollo-server": "2.19.0",
-		"apollo-server-express": "2.19.0",
-		"aws-sdk": "2.966.0",
-		"axios": "0.21.0",
-		"bcrypt": "5.0.0",
-		"body-parser": "1.19.0",
-		"dotenv": "^10.0.0",
-		"express": "4.17.1",
-		"graphql": "15.5.1",
-		"graphql-tools": "8.1.0",
+		"@graphql-codegen/cli": "2.6.1",
+		"@graphql-codegen/introspection": "2.1.1",
+		"@graphql-codegen/typescript": "2.4.3",
+		"@graphql-codegen/typescript-mongodb": "2.3.1",
+		"@graphql-codegen/typescript-resolvers": "2.5.0",
+		"@graphql-tools/load-files": "6.5.3",
+		"@graphql-tools/merge": "8.2.2",
+		"@graphql-tools/schema": "8.3.1",
+		"@graphql-tools/utils": "8.6.1",
+		"@swc/cli": "0.1.55",
+		"@swc/core": "1.2.139",
+		"@swc/core-linux": "1.2.42",
+		"@swc/core-linux-musl": "1.2.42",
+		"@swc/register": "0.1.10",
+		"apollo-datasource-rest": "3.5.1",
+		"apollo-server": "3.6.3",
+		"apollo-server-express": "3.6.3",
+		"aws-sdk": "2.1073.0",
+		"axios": "0.25.0",
+		"bcrypt": "5.0.1",
+		"body-parser": "1.19.1",
+		"dotenv": "16.0.0",
+		"express": "4.17.2",
+		"graphql": "16.3.0",
+		"graphql-tools": "8.2.0",
 		"graphql-type-json": "0.3.2",
 		"ip2location-nodejs": "9.1.0",
 		"jsonwebtoken": "8.5.1",
-		"krowdy-geoip": "1.0.2",
 		"module-alias": "2.2.2",
-		"mongoose": "5.11.8",
+		"mongoose": "6.2.1",
 		"morgan": "1.10.0",
-		"newrelic": "8.5.2",
-		"redis": "3.1.2",
+		"newrelic": "8.7.1",
+		"redis": "4.0.3",
 		"signale": "1.4.0",
-		"typescript": "4.1.3",
-		"url-parse": "1.5.3"
+		"typescript": "4.5.5",
+		"url-parse": "1.5.4"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "3.0.0",
-		"@types/express": "4.17.9",
-		"@types/module-alias": "2.0.0",
-		"@types/mongoose": "5.10.3",
-		"@types/morgan": "1.9.2",
-		"@types/node": "14.14.14",
-		"@types/redis": "2.8.32",
-		"@types/signale": "1.4.1",
-		"@types/url-parse": "1.4.4",
-		"@typescript-eslint/eslint-plugin": "4.10.0",
-		"@typescript-eslint/parser": "4.10.0",
-		"eslint": "7.16.0",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-prettier": "7.1.0",
+		"@types/bcrypt": "5.0.0",
+		"@types/express": "4.17.13",
+		"@types/module-alias": "2.0.1",
+		"@types/mongoose": "5.11.97",
+		"@types/morgan": "1.9.3",
+		"@types/node": "17.0.17",
+		"@types/redis": "4.0.11",
+		"@types/signale": "1.4.4",
+		"@types/url-parse": "1.4.8",
+		"@typescript-eslint/eslint-plugin": "5.11.0",
+		"@typescript-eslint/parser": "5.11.0",
+		"eslint": "8.9.0",
+		"eslint-config-airbnb-base": "15.0.0",
+		"eslint-config-prettier": "8.3.0",
 		"eslint-import-resolver-alias": "1.1.2",
-		"eslint-plugin-import": "2.22.1",
-		"eslint-plugin-prettier": "3.3.0",
-		"eslint-plugin-react": "7.21.5",
-		"husky": "4.3.6",
-		"lint-staged": "10.5.3",
-		"nodemon": "2.0.6",
-		"prettier": "2.2.1"
+		"eslint-plugin-import": "2.25.4",
+		"eslint-plugin-prettier": "4.0.0",
+		"eslint-plugin-react": "7.28.0",
+		"husky": "^7.0.0",
+		"lint-staged": "12.3.3",
+		"nodemon": "2.0.15",
+		"prettier": "2.5.1"
 	},
 	"_moduleAliases": {
 		"actuators": "/src/datalayer/actuators",
@@ -97,6 +93,6 @@
 		"utils": "/src/utils"
 	},
 	"resolutions": {
-		"graphql": "15.5.1"
+		"graphql": "16.3.0"
 	}
 }
