--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
 		"lint-staged": "lint-staged",
 		"prepare": "husky install"
 	},
-	"husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
 	"lint-staged": {
 		"{handler,src}/**/*.{js,ts}": [
 			"graphql-codegen --config codegen.yml",
 			"eslint --ignore-path .gitignore --ext .js,.ts --fix"
 		]
 	},
+	"husky": {
+    "hooks": {
+      "pre-commit": "yarn lint-staged"
+    }
+  },
 	"dependencies": {
 		"@graphql-codegen/cli": "2.6.1",
 		"@graphql-codegen/introspection": "2.1.1",
@@ -84,6 +84,7 @@
 		"eslint-plugin-prettier": "4.0.0",
 		"eslint-plugin-react": "7.28.0",
 		"husky": "^7.0.0",
+		"lint-staged": "12.3.3",
 		"nodemon": "2.0.15",
 		"prettier": "2.5.1"
 	},
