[update] avances de authenticacion de servicios de terceros

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "NODE_ENV=production NEWRELIC_ENABLED_SERVICE=active node dist/index.js",
 		"build": "swc ./src index.ts -d dist -D",
 		"postinstall": "npm run generate && npm run build",
-		"dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node -r @swc/register index.ts",
+		"dev": "nodemon -w 'src/**/*' -e ts,graphql --ignore 'src/**/*.spec.ts' --exec node -r @swc/register index.ts",
 		"tsc": "tsc",
 		"lint": "eslint . --ext .js,.ts --fix",
 		"generate": "graphql-codegen --config codegen.yml",
@@ -45,6 +45,7 @@
 		"body-parser": "1.19.1",
 		"dotenv": "16.0.0",
 		"express": "4.17.2",
+		"google-auth-library": "7.12.0",
 		"graphql": "16.3.0",
 		"graphql-tools": "8.2.0",
 		"graphql-type-json": "0.3.2",
@@ -54,6 +55,7 @@
 		"mongoose": "6.2.1",
 		"morgan": "1.10.0",
 		"newrelic": "8.7.1",
+		"oauth2-server": "3.1.1",
 		"redis": "4.0.3",
 		"signale": "1.4.0",
 		"typescript": "4.5.5",
@@ -66,6 +68,7 @@
 		"@types/mongoose": "5.11.97",
 		"@types/morgan": "1.9.3",
 		"@types/node": "17.0.17",
+		"@types/oauth2-server": "3.0.13",
 		"@types/redis": "4.0.11",
 		"@types/signale": "1.4.4",
 		"@types/url-parse": "1.4.8",
